// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test snapshot :: open modal 1`] = `
<Fragment>
  <Component
    aria-label="About button"
    id="aboutButton"
    onClick={[Function]}
    variant="plain"
  >
    <HelpIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Component>
  <AboutModal
    appendTo={null}
    backgroundImageSrc=""
    brandImageAlt="Logo"
    brandImageSrc="logo.svg"
    className=""
    isOpen={true}
    noAboutModalBoxContentContainer={false}
    onClose={[Function]}
    productName="gh-branches-dashboard"
    trademark="COPYRIGHT © 2020."
  >
    <TextContent>
      <TextList
        component="dl"
      >
        <TextListItem
          component="dt"
        >
          Source code
        </TextListItem>
        <TextListItem
          component="dd"
        >
          <a
            href="https://github.com/carlosthe19916/gh-branches-dashboard"
          >
            Github
          </a>
        </TextListItem>
      </TextList>
    </TextContent>
  </AboutModal>
</Fragment>
`;

exports[`Test snapshot 1`] = `
<Fragment>
  <Component
    aria-label="About button"
    id="aboutButton"
    onClick={[Function]}
    variant="plain"
  >
    <HelpIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Component>
  <AboutModal
    appendTo={null}
    backgroundImageSrc=""
    brandImageAlt="Logo"
    brandImageSrc="logo.svg"
    className=""
    isOpen={false}
    noAboutModalBoxContentContainer={false}
    onClose={[Function]}
    productName="gh-branches-dashboard"
    trademark="COPYRIGHT © 2020."
  >
    <TextContent>
      <TextList
        component="dl"
      >
        <TextListItem
          component="dt"
        >
          Source code
        </TextListItem>
        <TextListItem
          component="dd"
        >
          <a
            href="https://github.com/carlosthe19916/gh-branches-dashboard"
          >
            Github
          </a>
        </TextListItem>
      </TextList>
    </TextContent>
  </AboutModal>
</Fragment>
`;
